--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 numpy = "^1.26.2"
 pandas = "^2.1.3"
+scikit-learn = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0.2"
